cabal-version:       >= 1.10

name:                student-loans
version:             0.1.0.0
synopsis:            A tool to help understand student loan repayments
-- description:
license:             PublicDomain
author:              Rupert Horlick
maintainer:          ruperthorlick@gmail.com
category:            Math

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  -- exposed-modules:
  -- other-modules:

  build-depends:       base

executable student-loans
  default-language:    Haskell2010
  hs-source-dirs:      src

  main-is:             Main.hs
  -- other-modules:

  build-depends:       base
                     , Chart
                     , Chart-cairo
